# Telegram-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  telegram-rs Product Requirements Document (PRD).md
.github/workflows/: deploy.yml
benches/: main.rs
docs/: package.json  pnpm-lock.yaml  tailwind.config.js
docs/src/: App.tsx  styles.css
docs/src/components/: ApiDocs.tsx  Demos.tsx  Examples.tsx  Home.tsx
examples/: generic_webhook.rs  mini_app.rs  polling_bot.rs  simple_bot.rs  wallet_bot.rs  weather_bot.rs  webhook_bot.rs
src/: client.rs  errors.rs  lib.rs  utils.rs
src/bot/: client.rs  handlers.rs  mod.rs  updates.rs
src/core/: bot.rs  mod.rs  requests.rs  types.rs
src/mini_app/: bridge.rs  init.rs  mod.rs
src/rt/: mod.rs  polling.rs  webhook.rs
src/wallet/: mod.rs  session.rs  ton.rs
telegram-macros/: Cargo.toml
telegram-macros/src/: lib.rs
tests/: bot_tests.rs  mini_app_tests.rs  wallet_tests.rs
