[package]
name = "telegram-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comprehensive Rust library for building Telegram bots and Mini Apps with optional wallet integration"
repository = "https://github.com/yourusername/telegram-rs"
readme = "README.md"
keywords = ["telegram", "bot", "mini-app", "async", "ton"]
categories = ["api-bindings", "command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["bot"]
bot = []
mini-app = []
wallet = []

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
