[package]
name = "telegram-rs-2"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comprehensive Rust library for building Telegram bots and Mini Apps with optional wallet integration"
repository = "https://github.com/Penivera/Telegram-rs"
readme = "README.md"
keywords = ["telegram", "bot", "mini-app", "async", "ton"]
categories = ["api-bindings", "command-line-utilities", "network-programming"]

[workspace]
members = ["telegram-macros"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
log = "0.4"
thiserror = "1.0"
actix-web = { version = "4", optional = true }
telegram-macros = { path = "telegram-macros", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "0.14", features = ["full"] }

[features]
default = ["bot"]
bot = []
mini-app = []
wallet = []
webhook = ["actix-web"]

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
